--- a/Game2048/pom.xml
+++ b/Game2048/pom.xml
@@ -69,7 +69,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.game2048/com.example.game2048.HelloApplication</mainClass>
+                            <mainClass>com.example.game2048/com.example.game2048.GameApp</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
